# ET-dot

./: .gitignore  API.rst  HISTORY.rst  README.rst  micc.json  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst
et_dot/: __init__.py
et_dot/cpp_dotc/: CMakeLists.txt  dotc.cpp  dotc.rst
et_dot/f2py_dotf/: dotf.rst
et_dot/f90_dotf/: CMakeLists.txt  dotf.f90
tests/: __init__.py  test_cpp_dotc.py  test_et_dot.py  test_f2py_dotf.py
